creacion de los templates las paginas de subneteo y configuraciones bascias

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Se supone que es un titulo</h1>
+    </header>
 
-    <main></main>
+    <main>
+        <div>
+            <p><a href="./Subneteo/subneteo.html">Subnetar click aqui</a></p>
+        </div>
+
+        <div>
+            <p>
+                <a href="./basicConfig/basicConfig.html">Configuraciones basicas de switches y routers</a>
+            </p>
+        </div>
+    </main>
 
     <footer></footer>
-
-    <script src="./index.js"></script>
 </body>
 </html>
